--- a/White Grey Black/css/main.css
+++ b/White Grey Black/css/main.css
@@ -2,12 +2,9 @@
    Styles for Maciej's CSS Grig Page
    ========================================================================== */
 
-* {
+body {
   box-sizing: border-box;
   font-family: 'PT Serif', serif;
-}
-
-body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -15,6 +12,22 @@ body {
   z-index: -10;
   margin: 0 auto;
   background-color: white;
+}
+
+body p {
+  font-family: 'PT Serif', serif;
+  text-align: center;
+  font-size: 18px;
+  color: #4c4c4c;
+  line-height: 1.5;
+}
+
+body a {
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    color: #3b2192;
 }
 
 body h1 {
@@ -99,25 +112,6 @@ body h2, h3 {
   min-width: 600px;
 }
 
-.main__grid,
-.item__hero,
-.about__me p {
-  font-family: 'PT Serif', serif;
-  text-align: center;
-  font-size: 18px;
-  color: #4c4c4c;
-  line-height: 1.5;
-}
-
-.main__grid,
-.item__hero,
-.about__me a {
-  text-decoration: none;
-  font-size: 18px;
-  display: block;
-  text-align: center;
-}
-
 .main__grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
@@ -144,12 +138,6 @@ body h2, h3 {
   padding: 10px 50px 50px 50px;
 }
 
-.item a {
-  text-decoration: none;
-  font-size: 20px;
-  color: #3b2192;
-}
-
 .mouseover p {
   color: black;
   transition: 0.5s;
@@ -158,12 +146,6 @@ body h2, h3 {
 .mouseover {
     border-color: #f2f2f2;
     transition: 0.5s;
-}
-
-.clicked {
-  grid-column: span 2;
-  grid-row: span 2;
-  transition: 0.5s;
 }
 
 a:hover {
@@ -176,14 +158,11 @@ a:hover {
 .footer__element {
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: 60px;
   background-color: #d8d8d8;
 }
 
 .footer__element a {
-  text-decoration: none;
   font-size: 16px;
-  color: #3b2192;
 }
 
 small {
@@ -214,14 +193,6 @@ img {
   padding: 60px 40px 0 40px;
 }
 
-.image__me P {
-  font-family: 'PT Serif', serif;
-  text-align: center;
-  font-size: 18px;
-  color: #4c4c4c;
-  line-height: 1.5;
-}
-
 .footer__element a:hover {
   transition: all 1s linear;
   color: #48326e;
@@ -236,106 +207,107 @@ img {
 
 @media screen and (max-width: 650px) {
 
-body {
-  margin: 0px;
-}
+  body {
+    margin: 0px;
+  }
 
-.overlay {
-  min-width: 100%;
-  margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
-}
+  .overlay {
+    min-width: 100%;
+    margin: 0 auto;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 
-.hero__wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: auto;
-  padding-bottom: 30px;
-}
+  .hero__wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    padding-bottom: 30px;
+  }
 
-.main__grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: auto;
-  padding: 10px;
-  text-align: center;
-  z-index: 1;
-}
+  .main__grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    padding: 10px;
+    text-align: center;
+    z-index: 1;
+  }
 
-.item {
-  border: none;
-  z-index: 1;
-  padding: 0px;
-}
+  .item {
+    border: none;
+    z-index: 1;
+    padding: 0px;
+  }
 
-.item__hero {
-  padding: 0;
-  grid-column: 1;
-  grid-row: 2;
-}
+  .item__hero {
+    padding: 0;
+    grid-column: 1;
+    grid-row: 2;
+  }
 
-.sidenav a {
-  font-size: 18px;
-}
+  .sidenav a {
+    font-size: 18px;
+  }
 
-.footer__element {
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #d8d8d8;
+  .footer__element {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #d8d8d8;
+  }
 }
-
 /* ------------- Breakpoint 2 --------------- */
 
 @media screen and (max-width: 300px) {
-body h1 {
-  color: black;
-  font-size: 45px;
-  line-height: 1.2;
-  text-align: center;
-}
+  body h1 {
+    color: black;
+    font-size: 45px;
+    line-height: 1.2;
+    text-align: center;
+  }
 
-body h2, h3 {
-  color: black;
-  font-size: 30px;
-  line-height: 1.2;
-  text-align: center;
-}
+  body h2, h3 {
+    color: black;
+    font-size: 30px;
+    line-height: 1.2;
+    text-align: center;
+  }
 
-.overlay {
-  min-width: 100%;
-  margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
-}
+  .overlay {
+    min-width: 100%;
+    margin: 0 auto;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 
-.main__grid,
-.item__hero p {
-  font-family: 'PT Serif', serif;
-  text-align: center;
-  font-size: 14px;
-  color: #4c4c4c;
-  line-height: 1.5;
-}
+  .main__grid,
+  .item__hero p {
+    font-family: 'PT Serif', serif;
+    text-align: center;
+    font-size: 14px;
+    color: #4c4c4c;
+    line-height: 1.5;
+  }
 
-.hero__wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: auto;
-  padding-bottom: 5px;
-}
+  .hero__wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    padding-bottom: 5px;
+  }
 
-.main__grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: auto;
-  grid-gap: 10px;
-  grid-auto-flow: dense;
-  text-align: center;
-  z-index: 1;
-}
+  .main__grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    grid-gap: 10px;
+    grid-auto-flow: dense;
+    text-align: center;
+    z-index: 1;
+  }
 
-.item {
-  padding: 5px;
+  .item {
+    padding: 5px;
+  }
 }
