--- a/White Grey Black/css/main.css
+++ b/White Grey Black/css/main.css
@@ -33,14 +33,14 @@ body a {
 body h1 {
   color: black;
   font-size: 55px;
-  line-height: 1.2;
+  line-height: 1;
   text-align: center;
 }
 
 body h2, h3 {
   color: black;
   font-size: 35px;
-  line-height: 1.2;
+  line-height: 1.5;
   text-align: center;
 }
 
@@ -201,6 +201,60 @@ img {
 #linkedin {
   display: inline;
 }
+
+/* ------------- Mini Grifd Animation Styles ------------- */
+
+.mini__grid {
+  padding-bottom: 5px;
+  margin: 0 auto;
+  max-width: 50px;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 12px);
+  grid-template-rows: repeat(3, 12px);
+  grid-gap: 1px;
+  grid-template-areas:
+                      "a b c"
+                      "d e f"
+                      "g h i"
+}
+
+.mini__grid__items {
+  border: 2px solid #4c4c4c;
+  opacity: 0.6;
+}
+
+.mini__item1 {
+  display: none;
+  grid-area: f;
+}
+
+.mini__item2 {
+  display: none;
+  grid-area: e;
+}
+
+.mini__item3 {
+
+  display: none;
+  grid-area: d;
+}
+
+.mini__item4 {
+  display: none;
+  grid-area: i;
+}
+
+.mini__item5 {
+  display: none;
+  grid-area: a;
+}
+
+.mini__item6 {
+  display: none;
+  grid-area: c;
+}
+
 /* -------> @media queries <------- */
 
 /* ------------- Breakpoint 1 --------------- */
