--- a/White Grey Black/css/main.css
+++ b/White Grey Black/css/main.css
@@ -22,11 +22,16 @@ body p {
   line-height: 1.5;
 }
 
+.top__nav,
+.footer p {
+  color: #48326e;
+}
+
 body a {
     text-decoration: none;
     display: block;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     color: #3b2192;
 }
 
@@ -46,9 +51,9 @@ body h2, h3 {
 
 /* --- Navigation Styling Below --- */
 
-.sidenav {
+/* .sidenav {
   height: 100%;
-  width: 0;
+  display: none;
   position: fixed;
   z-index: 10;
   top: 0;
@@ -57,6 +62,12 @@ body h2, h3 {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+}
+
+.sidenav__open {
+    transition: 1s;
+    width: 220px;
+    z-index: 30;
 }
 
 .sidenav a {
@@ -69,31 +80,50 @@ body h2, h3 {
 }
 
 .sidenav a:hover {
+  cursor:pointer;
   color: #f1f1f1;
-}
+} */
 
-.sidenav .closebtn {
+/* .sidenav .closebtn {
   position: absolute;
   top: 0;
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
-}
+} */
 
 .top__nav__hamburger {
-  text-align: right;
-  margin-top: 12px;
-  margin-bottom: 16px;
+  margin-top: 8px;
+  margin-bottom: 15px;
 }
 
-.top__nav__hamburger span {
+.top__nav__hamburger a {
   color: black;
-  font-size: 70px;
+  font-size: 30px;
+  text-align: right;
 }
 
 .hamburger {
   display: block;
   text-align: right;
+}
+
+/* ------------ New Nav ------------ */
+
+.top__nav {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row: auto;
+  grid-gap: 15px;
+  font-size: 15px;
+}
+
+.nav__items {
+
+}
+
+.not__visible p{
+  display: none;
 }
 
 /* -------> Hero section styling <------- */
@@ -151,6 +181,12 @@ body h2, h3 {
 a:hover {
   transition: all 1s linear;
   color: #48326e;
+}
+
+.nav__items,
+.footer a:hover {
+  transition: all 1s linear;
+  color: #4c4c4c;
 }
 
 /* -------> Footer <------- */
