--- a/White Grey Black/css/main.css
+++ b/White Grey Black/css/main.css
@@ -22,17 +22,12 @@ body p {
   line-height: 1.5;
 }
 
-.top__nav,
-.footer p {
-  color: #48326e;
-}
-
 body a {
     text-decoration: none;
     display: block;
     text-align: center;
     font-size: 18px;
-    color: #3b2192;
+    color: #231357;
 }
 
 body h1 {
@@ -139,14 +134,14 @@ body h2, h3 {
 }
 
 a:hover {
-  transition: all 1s linear;
-  color: #48326e;
+  transition: all .5s linear;
+  color: #6c5a8b;
 }
 
 .nav__items,
 .footer a:hover {
-  transition: all 1s linear;
-  color: #4c4c4c;
+  transition: all .5s linear;
+  color: #6c5a8b;
 }
 
 /* -------> Footer <------- */
@@ -279,7 +274,7 @@ img {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
-    padding: 10px;
+    padding: 15px;
     text-align: center;
     z-index: 1;
   }
@@ -310,6 +305,11 @@ img {
 /* ------------- Breakpoint 2 --------------- */
 
 @media screen and (max-width: 300px) {
+
+  body {
+    margin: 0 15px 0 15px;
+  }
+
   body h1 {
     color: black;
     font-size: 45px;
@@ -344,7 +344,7 @@ img {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
-    padding-bottom: 5px;
+    padding: 0 15px 5px 15px;
   }
 
   .main__grid {
